--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -23,6 +23,11 @@
     cursor: not-allowed;
     opacity: 0.5;
 }
+.button:focus-visible {
+    outline: 3px solid var(--text-color) !important;
+    outline-offset: 2px !important;
+    border-radius: 8px;
+}
 .button > a {
     color: inherit;
     text-decoration: none !important;
