--- a/src/styles/main-frame.css
+++ b/src/styles/main-frame.css
@@ -1,4 +1,5 @@
 html {
+	font-size: 24px;
 	scroll-behavior: smooth;
 	overflow-x: clip;
 	text-rendering: optimizeLegibility;
@@ -199,7 +200,7 @@ img {
 }
 
 label {
-	font-size: 0.8em !important;
+	font-size: 0.9em !important;
 	font-weight: 600;
 	margin: 0px;
 	-webkit-user-select: none;
@@ -256,7 +257,7 @@ input,
 textarea {
 	font: inherit;
 	color: inherit;
-	font-size: 0.8em !important;
+	font-size: 0.9em !important;
 }
 input[type],
 textarea {
