--- a/src/styles/media-styles.css
+++ b/src/styles/media-styles.css
@@ -14,7 +14,7 @@
 		--section-gap-vertical: 24px;
 		--section-gap-horizontal: 64px;
 
-		font-size: 24px !important;
+		font-size: 1rem !important;
 	}
 
 	body > .body-wrapper {
@@ -30,7 +30,7 @@
 		--section-gap-vertical: 20px;
 		--section-gap-horizontal: 48px;
 
-		font-size: 24px !important;
+		font-size: 1rem !important;
 	}
 
 	body > .body-wrapper {
@@ -49,7 +49,7 @@
 		--navigation-padding-horizontal: 14px;
 		--navigation-padding-vertical: 10px;
 
-		font-size: 22px !important;
+		font-size: 0.91666666666666666666666666666667rem !important;
 	}
 }
 
@@ -66,7 +66,7 @@
 		--button-padding-horizontal: 20px;
 		--button-border-radius: 8px;
 
-		font-size: 20px !important;
+		font-size: 0.83333333333333333333333333333333rem !important;
 	}
 }
 
@@ -82,7 +82,7 @@
 		--navigation-padding-horizontal: 14px;
 		--navigation-padding-vertical: 14px;
 
-		font-size: 18px !important;
+		font-size: 0.75rem !important;
 	}
 }
 
@@ -95,7 +95,7 @@
 		--icon-text-weight: 700;
 		--navigation-root-padding-vertical: 16px;
 
-		font-size: 16px !important;
+		font-size: 0.66666666666666666666666666666667rem !important;
 	}
 
 	body > .body-wrapper {
