--- a/src/styles/main-frame.css
+++ b/src/styles/main-frame.css
@@ -170,12 +170,12 @@ h4 {
 }
 h5 {
 	font-size: var(--h5-font-size);
-	font-weight: 600;
+	font-weight: 700;
 	margin: 0px;
 }
 h6 {
 	font-size: var(--h6-font-size);
-	font-weight: 600;
+	font-weight: 700;
 	margin: 0px;
 }
 p {
@@ -306,10 +306,10 @@ input[type="checkbox"] {
 	margin: 0;
 	font: inherit;
 	color: currentColor;
-	width: 24px;
-	height: 24px;
-	border: 3px solid var(--separator-color);
-	border-radius: calc(var(--button-border-radius) * 0.75);
+	width: 1.5em;
+	height: 1.5em;
+	border: .125em solid var(--separator-color);
+	border-radius: .425em;
 	display: grid;
   	place-content: center;
 	transition-property: background-color, border-color;
@@ -323,12 +323,12 @@ input[type="checkbox"]:checked {
 input[type="checkbox"]:focus-visible {
 	outline: 3px solid var(--text-color) !important;
     outline-offset: 2px !important;
-    border-radius: 6px;
+    border-radius: .425em;
 }
 input[type="checkbox"]::before {
 	content: "";
-	width: 14px;
-	height: 14px;
+	width: .875em;
+	height: .875em;
 	transform: scale(0);
 	transition: 133ms transform ease-out;
 	background-color: var(--accent-button-text-color);
