--- a/src/styles/media-styles.css
+++ b/src/styles/media-styles.css
@@ -49,7 +49,7 @@
 		--navigation-padding-horizontal: 14px;
 		--navigation-padding-vertical: 10px;
 
-		font-size: 0.91666666666666666666666666666667rem !important;
+		font-size: 0.944444444444444rem !important;
 	}
 }
 
@@ -66,7 +66,7 @@
 		--button-padding-horizontal: 20px;
 		--button-border-radius: 8px;
 
-		font-size: 0.83333333333333333333333333333333rem !important;
+		font-size: 0.861111111111111rem !important;
 	}
 }
 
@@ -82,7 +82,7 @@
 		--navigation-padding-horizontal: 14px;
 		--navigation-padding-vertical: 14px;
 
-		font-size: 0.75rem !important;
+		font-size: 0.794444444444445rem !important;
 	}
 }
 
@@ -95,7 +95,7 @@
 		--icon-text-weight: 700;
 		--navigation-root-padding-vertical: 16px;
 
-		font-size: 0.66666666666666666666666666666667rem !important;
+		font-size: .75rem !important;
 	}
 
 	body > .body-wrapper {
